Fixed some spacing/sizing issues for breadcrumbs.

--- a/styles/wiki.css
+++ b/styles/wiki.css
@@ -958,14 +958,14 @@ ul .level1, ul .level2, ul .level3 {
 	}
 }
 #breadcrumbs nav {
-  margin-left: -1px;
-  margin-right: -1px;
-  font-size: .8em;
+  margin-left: 0;
+  margin-right: 0;
+  font-size: .875rem;
 }
 #breadcrumbs ol {
   background-color: #bbd;
   margin: 0;
-  padding: 0 10px 0 10px;
+  padding: 0 .75rem;
 }
 #breadcrumbs li+li:before {
   padding: 0 .5em 0;
@@ -974,4 +974,6 @@ ul .level1, ul .level2, ul .level3 {
 #breadcrumbs nav a {
   border: 0;
 }
-
+.mainscreen {
+  padding-top:1.5rem;
+}
